fix: don’t use giant fonts on mobile

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -38,7 +38,7 @@ textarea {
 
 
 body {
-  font-size: 165%;
+  font-size: 110%;
   --font: Mada;
   font-family: var(--font), serif;
   margin: 0 auto;
@@ -46,6 +46,12 @@ body {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
+}
+
+@media (min-width: 35em) {
+  body {
+    font-size: 165%;
+  }
 }
 
 main {
